# ft_nlp

./: markdown_basics.md  sample.py
deletethis/: main.py
deletethis/opers/: area.py
docker/: whatndwhy.md
errors/: conda_errors.md
folder1/source/: area.py  mydb.py
folder1/tests/: test_area.py  test_dir.py  test_fix.py  test_par.py
format_tools/: black_isort.py  pyproject.toml
gitlab/: whatndwhy.md
material/VSCode/: main.md
material/anaconda/: conda.md  file.md
material/dvc/: basics.md  file.md
material/git/: basics.md  branches.md  commands.md  gitadd.md  gitcheckout.md  gitclone.md  gitcommit.md  gitlog.md  gitmerge.md  gitpush.md  gitreset.md  gitstash.md  questions.txt  whatnwhy.md
material/linuxcmd/: bashrc.md  basics.md  commoncommands.md  env.md  shell.md  ssh.md  tmux.md
material/poetry/: file.md  pyprojecttoml.md
material/pytest/: file.md  fixtures.md  mock.md  tmp_path.md
material/python/: methodvsfunction.md  python0.md  python1.md  python2.md  python22.md  python23.md  python2q.md
material/summaries/: conda_summary.md  env_summary.md  git_summary.md  pip_summary.md  poetry_summary.md  pytest_summary.md  python_summary.md
material/venv_pip/: basics.md  package.md  pipbasics.md  pipx.md
poetry_delete/: pyproject.toml
poetry_tut/: pyproject.toml
python_prct/: aparse.py  loging.ipynb  loging.py
python_prct/basics/: calculator.py  etc.py  meow.py  python0.py  python1.py  test_python1ut.py  type.py  unpack.py
python_prct/oops/: main.py  pythonoop.py  (+2 more)
randomrepo/: requirements.txt
ssh/: main.md
vscode/: main.md
(+8 files in other folders)
